index.css
* {
    margin: 0px;
}

body {
    font-family: sans-serif;
    background-image: url("/image/homeback.png");
    background-repeat: no-repeat;
    background-size: 100%;
  
   

}
/*------------nav-----------*/
nav{
    height:20px;
    padding-top: 10px;
    padding-left: 1px;
    padding-bottom: 10px;
    background-color: rgb(10, 6, 61);

}

nav ul{
    list-style: none;
    display: flex;
    padding-left: 10px;
}




li a{
    padding-left: 10px;
    text-decoration: none;
}



.register {    
    
    margin-left: 20px;
   
}

.register li a{
    color: #F0EFEF;
}

.home li a{
    color: #d1df0f;
    font-weight: bold;
}


.Projects {    
    
    margin-left: 20px;
   
}

.Projects li a{
    color: #F0EFEF;
}


/*----------heading -------------*/



.userinfo{
   
  /*background-color: aquamarine;*/
   margin-top: 15%; 
   margin-right: 10%;
   margin-left:48%;
   text-align: center;
   height: fit-content
}      


h1{
    font-size:50px;
    font-weight: bold;
}

.name{
color: rgb(214, 37, 105);
font-size: 35px;
font-weight: bold;   
}


.Branch{
    font: bold;
    
}

